[package]
name = "proto"
version = "0.1.0"
authors = ["Peita Lin <n6378056@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
failure = "0.1"
log = "0.4"
env_logger = "*"
pretty_env_logger = "*"

tokio = "*"
futures = "0.1.23"

prost = "0.4"
prost-derive = "^0.4"

actix = "^0.7"
actix-web = { version = "0.7.18", features = ["alpn"] }
actix-protobuf = { git = "https://github.com/actix/actix-protobuf"}

actix-redis = "0.5.1"
redis-async = "0.4.4"
redis = "0.10"

serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1"

