[package]
name = "actix-ws-redis-protobuf"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Peita Lin <n6378056@gmail.com>"]
description = "Actix Web websocket broadcast hub with optional Redis and Protobuf helpers."
license = "MIT OR Apache-2.0"

[features]
default = []
protobuf = ["dep:prost", "dep:prost-types"]
redis = ["dep:redis"]

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
bytes = "1"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
time = "=0.3.36"

prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }

[dependencies.redis]
version = "0.25"
optional = true
features = ["tokio-comp", "connection-manager"]

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
actix-rt = "2"
